manifests/row-major-web/base/row-major-web.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: row-major-web
  labels:
    row-major.net/gateway-application: row-major-net

---

kind: Service
apiVersion: v1
metadata:
  name: row-major-web-content-service
  namespace: row-major-web
  labels:
    app: row-major-web
    component: content
spec:
  type: NodePort
  selector:
    app: row-major-web
    component: content
  ports:
    - name: http
      protocol: TCP
      port: 8001
      targetPort: 8080

---

kind: Deployment
apiVersion: apps/v1
metadata:
  name: row-major-web-content-deployment
  namespace: row-major-web
  labels:
    app: row-major-web
    component: content
spec:
  selector:
    matchLabels:
      app: row-major-web
      component: content
  replicas: 1
  template:
    metadata:
      labels:
        app: row-major-web
        component: content
    spec:
      serviceAccountName: webalator
      containers:
        - name: row-major-web-content
          image: gcr.io/bomsync-214520/webalator:1599365705
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          command:
            - /app/webalator/webalator
            - --content-pack=file://webalator/row_major_content.webalator.zip
            - --listen=0.0.0.0:8080
            - --debug-listen=0.0.0.0:8081
            - --logtostderr=true
            - --enable-profiling
            - --enable-tracing
            - --tracing-ratio=1.0
            - --enable-metrics
          resources:
            requests:
              cpu: 250m
              ephemeral-storage: 10Mi
              memory: 512Mi
            limits:
              ephemeral-storage: 10Mi
              memory: 512Mi

---

kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: row-major-net
  namespace: row-major-web
spec:
 parentRefs:
 - kind: Gateway
   namespace: infra-gateway
   name: external-http
 hostnames:
 - "row-major.net"
 - "www.row-major.net"
 rules:
 - backendRefs:
   - name: row-major-web-content-service
     port: 8001
